updated comparative function model.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "8732a6f4",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,9 @@
     "\n",
     "# LDA QDA Modeling\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
+    "\n",
+    "# Decomposition\n",
+    "from sklearn.cross_decomposition import PLSCanonical\n",
     "\n",
     "# Metrics\n",
     "from sklearn.metrics import confusion_matrix, balanced_accuracy_score, ConfusionMatrixDisplay, classification_report, precision_recall_curve, PrecisionRecallDisplay, log_loss, brier_score_loss, roc_curve, roc_auc_score, RocCurveDisplay, det_curve, DetCurveDisplay, fbeta_score, class_likelihood_ratios, average_precision_score, matthews_corrcoef"
@@ -1745,100 +1748,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "35f78dd4",
+   "execution_count": null,
+   "id": "b328b1f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def comparing_models(models, X_train, y_train, X_test, y_test):\n",
-    "    \"\"\" Multiple Classification metrics used to determine the top 3 performing models\n",
-    "    requires a list of models.\"\"\"\n",
+    "    results = []\n",
     "\n",
-    "    model_list = []\n",
     "    for est in models:\n",
-    "        if hasattr(est, \"decision_function\") and callable(getattr(est, \"decision_function\")) and hasattr(est, \"predict_proba\") == False:\n",
-    "                    est.fit(X_train, y_train)\n",
-    "                    y_pred = est.predict(X_test)\n",
-    "                    decision_scores = est.decision_function(X_test)\n",
-    "                    roc_auc = roc_auc_score(y_true = y_test, y_score = decision_scores)\n",
-    "                    pr_auc = average_precision_score(y_true = y_test, y_score = decision_scores)\n",
-    "                    ll = np.nan # models that don't have predict_proba cannot be used for log_loss.\n",
-    "                    bcl = np.nan # models that don't have predict_proba cannot be used for bcl.\n",
-    "                    mc = matthews_corrcoef(y_true = y_test, y_pred = y_pred)\n",
-    "                    temp_df = pd.DataFrame(\n",
-    "                            data =  {\n",
-    "                        \"roc_auc\": roc_auc,\n",
-    "                        \"pr_auc\": pr_auc,\n",
-    "                        \"Log_loss\": ll,\n",
-    "                        \"Brier_Score_Loss\": bcl,\n",
-    "                        \"Matthews Correlation Coefficient\": mc,\n",
-    "                        \"model_used\": est\n",
-    "                    },\n",
-    "                    index = pd.RangeIndex(0, 1)\n",
-    "                    )\n",
-    "                    model_list.append(temp_df)\n",
+    "        model_name = est.__class__.__name__\n",
     "\n",
-    "                    \n",
-    "        elif hasattr(est, \"predict_proba\") and callable(getattr(est, \"predict\")):\n",
-    "                    est.fit(X_train, y_train)\n",
-    "                    y_pred = est.predict(X_test)\n",
-    "                    pos_probabilites = est.predict_proba(X_test)[:, 1]\n",
-    "                    roc_auc = roc_auc_score(y_true = y_test, y_score = pos_probabilites)\n",
-    "                    pr_auc = average_precision_score(y_true = y_test, y_score = pos_probabilites)\n",
-    "                    ll = log_loss(y_true = y_test, y_pred = y_pred)\n",
-    "                    bcl = brier_score_loss(y_true = y_test, y_proba = pos_probabilites)\n",
-    "                    mc = matthews_corrcoef(y_true = y_test, y_pred = y_pred)\n",
-    "                    temp_df = pd.DataFrame(\n",
-    "                            data =  {\n",
-    "                        \"roc_auc\": roc_auc,\n",
-    "                        \"pr_auc\": pr_auc,\n",
-    "                        \"Log_loss\": ll,\n",
-    "                        \"Brier_Score_Loss\": bcl,\n",
-    "                        \"Matthews Correlation Coefficient\": mc,\n",
-    "                        \"model_used\": est\n",
-    "                    },\n",
-    "                    index = pd.RangeIndex(0, 1)\n",
-    "                    )\n",
-    "                    model_list.append(temp_df)\n",
-    "    final_df = pd.concat(objs=model_list)\n",
+    "        try:\n",
+    "            est.fit(X_train, y_train)\n",
+    "            y_pred = est.predict(X_test)\n",
     "\n",
-    "        \n",
-    "    return final_df    "
+    "            # Default values\n",
+    "            roc_auc = np.nan\n",
+    "            pr_auc = np.nan\n",
+    "            ll = np.nan\n",
+    "            bcl = np.nan\n",
+    "\n",
+    "            # Use predict_proba if available\n",
+    "            if hasattr(est, \"predict_proba\"):\n",
+    "                pos_prob = est.predict_proba(X_test)[:, 1]\n",
+    "                roc_auc = roc_auc_score(y_test, pos_prob)\n",
+    "                pr_auc = average_precision_score(y_test, pos_prob)\n",
+    "                ll = log_loss(y_test, pos_prob)\n",
+    "                bcl = brier_score_loss(y_test, pos_prob)\n",
+    "\n",
+    "            # Otherwise use decision_function\n",
+    "            elif hasattr(est, \"decision_function\"):\n",
+    "                scores = est.decision_function(X_test)\n",
+    "                roc_auc = roc_auc_score(y_test, scores)\n",
+    "                pr_auc = average_precision_score(y_test, scores)\n",
+    "\n",
+    "            \n",
+    "            mc = matthews_corrcoef(y_test, y_pred)\n",
+    "\n",
+    "            results.append({\n",
+    "                \"model\": model_name,\n",
+    "                \"roc_auc\": roc_auc,\n",
+    "                \"pr_auc\": pr_auc,\n",
+    "                \"log_loss\": ll,\n",
+    "                \"brier_score\": bcl,\n",
+    "                \"matthews_corrcoef\": mc\n",
+    "            })\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            results.append({\n",
+    "                \"model\": model_name,\n",
+    "                \"roc_auc\": np.nan,\n",
+    "                \"pr_auc\": np.nan,\n",
+    "                \"log_loss\": np.nan,\n",
+    "                \"brier_score\": np.nan,\n",
+    "                \"matthews_corrcoef\": np.nan,\n",
+    "                \"error\": str(e)\n",
+    "            })\n",
+    "\n",
+    "    return pd.DataFrame(results)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "72eacb8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:71: FutureWarning: Class PassiveAggressiveClassifier is deprecated; this is deprecated in version 1.8 and will be removed in 1.10. Use `SGDClassifier(loss='hinge', penalty=None, learning_rate='pa1', eta0=1.0)` instead.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "models = [LogisticRegression(random_state=42), \n",
-    "          RidgeClassifier(random_state=42), \n",
+    "models = [LogisticRegressionCV(penalty='l1', solver='saga'),\n",
+    "          LogisticRegressionCV(penalty='l2', solver='sag'),\n",
+    "          LogisticRegressionCV(penalty='elasticnet', solver='saga')\n",
     "          RidgeClassifierCV(alphas=np.logspace(-6, 6, 13)),\n",
-    "          #LogisticRegressionCV(penalty='l1', solver='saga'),\n",
-    "          #LogisticRegressionCV(penalty='l2', solver='sag'),\n",
-    "          #LogisticRegressionCV(penalty='elasticnet', solver='saga'),\n",
-    "          SGDClassifier(),\n",
+    "          SGDClassifier(loss='log_loss'), # Logistic Regression via SGD\n",
+    "          SGDClassifier(loss='hinge'), # linear SVM via SGD\n",
     "          Perceptron(),\n",
     "          PassiveAggressiveClassifier(),\n",
     "          LinearDiscriminantAnalysis(),\n",
-    "          QuadraticDiscriminantAnalysis(reg_param=0.1),\n",
     "          LinearSVC()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "bf30ab1d",
    "metadata": {},
    "outputs": [
@@ -1934,11 +1926,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.864778</td>\n",
-       "      <td>0.773071</td>\n",
+       "      <td>0.881602</td>\n",
+       "      <td>0.786776</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.639011</td>\n",
+       "      <td>0.668371</td>\n",
        "      <td>SGDClassifier()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1952,11 +1944,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.871195</td>\n",
-       "      <td>0.758631</td>\n",
+       "      <td>0.852069</td>\n",
+       "      <td>0.697208</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.592215</td>\n",
+       "      <td>0.530154</td>\n",
        "      <td>PassiveAggressiveClassifier()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1995,9 +1987,9 @@
        "0  0.903291  0.827796  3.377123          0.078317   \n",
        "0  0.891637  0.816381       NaN               NaN   \n",
        "0  0.891637  0.816381       NaN               NaN   \n",
-       "0  0.864778  0.773071       NaN               NaN   \n",
+       "0  0.881602  0.786776       NaN               NaN   \n",
        "0  0.849885  0.726582       NaN               NaN   \n",
-       "0  0.871195  0.758631       NaN               NaN   \n",
+       "0  0.852069  0.697208       NaN               NaN   \n",
        "0  0.891981  0.816507  3.488335          0.080379   \n",
        "0  0.856036  0.660221  5.638424          0.155831   \n",
        "0  0.899084  0.820990       NaN               NaN   \n",
@@ -2006,9 +1998,9 @@
        "0                          0.709374   \n",
        "0                          0.699690   \n",
        "0                          0.699690   \n",
-       "0                          0.639011   \n",
+       "0                          0.668371   \n",
        "0                          0.539743   \n",
-       "0                          0.592215   \n",
+       "0                          0.530154   \n",
        "0                          0.699812   \n",
        "0                          0.479314   \n",
        "0                          0.707575   \n",
@@ -2025,7 +2017,7 @@
        "0                                        LinearSVC()  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
