updated models list to get rid of redundant linear models.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -1811,14 +1811,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "72eacb8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:71: FutureWarning: Class PassiveAggressiveClassifier is deprecated; this is deprecated in version 1.8 and will be removed in 1.10. Use `SGDClassifier(loss='hinge', penalty=None, learning_rate='pa1', eta0=1.0)` instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "models = [LogisticRegressionCV(penalty='l1', solver='saga'),\n",
     "          LogisticRegressionCV(penalty='l2', solver='sag'),\n",
-    "          LogisticRegressionCV(penalty='elasticnet', solver='saga')\n",
+    "          LogisticRegressionCV(penalty='elasticnet', solver='saga'),\n",
     "          RidgeClassifierCV(alphas=np.logspace(-6, 6, 13)),\n",
     "          SGDClassifier(loss='log_loss'), # Logistic Regression via SGD\n",
     "          SGDClassifier(loss='hinge'), # linear SVM via SGD\n",
