gridsearchCV instantiated and parameterized with log_reg_l2_pipeline and log_reg_l2_param_grid.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -1996,12 +1996,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "4d84c4dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_reg_l2 = Pipeline(\n",
+    "log_reg_l2_pipe = Pipeline(\n",
     "    steps = [\n",
     "        ('Select_From_Model', SelectFromModel(estimator = LogisticRegressionCV(penalty='l1', solver='saga', max_iter=5000, class_weight='balanced'))),\n",
     "        ('log_reg_l2', LogisticRegressionCV(penalty='l2', solver='sag', max_iter=5000, class_weight='balanced'))\n",
@@ -2016,11 +2016,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {\n",
-    "    'SelectFromModel__estimator__Cs': [[0.01, 0.1, 1, 10]],\n",
-    "    'log_reg_l2_Cs': [[0.01, 0.1, 1, 10]],\n",
-    "    'SelectFromModel__estimator__cv': [3, 5],\n",
-    "    'log_reg_l2_cv': [3,5]\n",
+    "log_reg_l2_param_grid = param_grid = {\n",
+    "    'Select_From_Model__estimator__Cs': [[0.01, 0.1, 1, 10]],\n",
+    "    'log_reg_l2__Cs': [[0.01, 0.1, 1, 10]],\n",
+    "    'Select_From_Model__estimator__cv': [3, 5],\n",
+    "    'log_reg_l2__cv': [3,5],\n",
+    "    'Select_From_Model__estimator__scoring': ['roc_auc'], \n",
+    "    'log_reg_l2__scoring': ['roc_auc'],\n",
     "}"
    ]
   },
@@ -2030,7 +2032,13 @@
    "id": "e2d859c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grid = GridSearchCV(\n",
+    "    estimator = log_reg_l2_pipe,\n",
+    "    param_grid = log_reg_l2_param_grid,\n",
+    "    scoring='roc_auc'\n",
+    ").fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2055,7 +2063,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LogisticRegressionCV(penalty='l1', solver='saga', max_iter=5000, class_weight='balanced').fit(X_train, y_train)"
+    "LogisticRegressionCV(penalty='l1', solver='saga', max_iter=5000, class_weight='balanced')"
    ]
   },
   {
