finished creating linearsvc model, param_grid, and gridsearchCV object.

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -2033,17 +2033,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = GridSearchCV(\n",
+    "log_reg_l2_grid = GridSearchCV(\n",
     "    estimator = log_reg_l2_pipe,\n",
     "    param_grid = log_reg_l2_param_grid,\n",
-    "    scoring='roc_auc'\n",
+    "    scoring='roc_auc',\n",
+    "    cv=5\n",
     ").fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33518916",
+   "id": "bd752b80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2058,12 +2059,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "4a20b289",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LogisticRegressionCV(penalty='l1', solver='saga', max_iter=5000, class_weight='balanced')"
+    "log_reg_l1 = LogisticRegressionCV(\n",
+    "    penalty='l1', \n",
+    "    solver='saga', \n",
+    "    max_iter=5000, \n",
+    "    class_weight='balanced')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "2e470848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg_l1_param_grid = {\n",
+    "    'Cs': [[0.01, 0.1, 1, 10]],\n",
+    "    'cv': [3, 5, 10], \n",
+    "    'scoring': ['roc_auc']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83e290d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg_l1_grid = GridSearchCV(\n",
+    "    estimator = log_reg_l1,\n",
+    "    param_grid = log_reg_l1_param_grid,\n",
+    "    scoring= 'roc_auc',\n",
+    "    cv=5\n",
+    ").fit(X_train, y_train)"
    ]
   },
   {
@@ -2081,16 +2115,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LinearSVC(penalty='l1', class_weight='balanced', dual=False)"
+    "lsvc_l1 = LinearSVC(\n",
+    "    penalty='l1',\n",
+    "    class_weight='balanced', \n",
+    "    dual=False,\n",
+    "    max_iter=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "0dde43a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lsvc_l1_param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dde43a1",
+   "id": "23b70531",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lsvc_l1_grid = GridSearchCV(\n",
+    "    estimator = lsvc_l1,\n",
+    "    param_grid = lsvc_l1_param_grid,\n",
+    "    scoring = 'roc_auc',\n",
+    "    cv=5\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
